[package]
name = "led_hat"
version = "0.1.0"
authors = ["Linus Gasser <linus.gasser@epfl.ch>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
axum = { version = "0.7.0" }
tokio = { version = "1.0", features = ["full"]}
tower-http = { version = "0.5", features = ["fs"] }

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
